1.jul (ws)
      - add patch from Miwarre: Hide/show naturals and courtesy keys
        for individual key sigs
      (la)
      - fix #6318: MusicXML export of syllabic is broken
29.jun (la)
      - fix #6264: Chordnames not transposed on copy-paste or concert pitch
      - fix #6283: R key does not work as expected in drum staff
28.jun (ws)
      - applied page offset patch from Miwarre
27.jun (ws)
      - more refactoring of spanner & slur elements eleminating
        element->tick
      (la)
      - fix #6254: Concert pitch lossy transposition (Patch by Aaron Epstein)
      - fix #6275: Remove the last inserted vertical frame make musecore hangs
26.jun (la)
      - Page numbers are no more editable in the score since formatting does not stick
      - fix #5906: Tick value shown in Object Inspector limited to 999999
      - fix #6253: High CPU usage when idle if reverb is on
25.jun (la)
      - fix #6079: problem in multimeasure rests with 2 staves score
24.jun (ws)
      - undo should now (mostly) work for changes made in edit mode
        for Spanner elements.
      - Changed implementation of HairPin, Otta, TextLine, Volta
        Trill and Pedal. They move from the global list in Score
        to the Segment of their startElement. Position is determined
        by startElement-endElement instead of tick positions.
        Introduced class Spanner as base class for this elements.
        Import/Export modules need to be adapted to this new scheme.
      (la)
      - fix #6163: Export MIDI in wrong preference tab
22.jun (lv)
      - #5637 support reading bww files: ties and triplets
      (la)
      - fix #6195 : breve rest & longa rest are inversed
      - Add Hebrew and Slovenian translation files
20.jun (lv)
      - fix key signature and note duration on MusicXML and BWW import
     (db)
      - remove incompatible "temperament tuning" plugin
     (la)
      - fix #6172 : note properties does not keep notehead group
18.jun (la)