@@ -3,6 +3,7 @@
         for individual key sigs
       (la)
       - fix #6318: MusicXML export of syllabic is broken
+      - Add message if unknown extension + no empty tab
 29.jun (la)
       - fix #6264: Chordnames not transposed on copy-paste or concert pitch
       - fix #6283: R key does not work as expected in drum staff
